# TimeRecorder

./: .gitignore  CONFIGURATION.md  LICENSE  README.md  config.yaml  logbook.py  main.py  pyproject.toml  pytest.ini  time_recorder.py
.github/workflows/: lint_and_test.yml  python-package.yml
src/: analyzer.py  arg_parser.py  config_utils.py  constants.py  logbook.py  logging_utils.py  time_recorder.py  visualizer.py
src/formats/: README.md  __init__.py  base.py  csv_handler.py  excel_handler.py  html_handler.py  json_handler.py  parquet_handler.py  registry.py  xml_handler.py  yaml_handler.py
tests/: conftest.py  test_calculate_overtime.py  test_calculate_work_duration.py  test_extract_time_components.py  test_get_weekly_hours_from_log.py  test_record_into_df.py  test_squash_df.py  test_time_record_line_to_dict.py  test_time_report_line_constructor.py  test_time_report_line_update_boot_time.py
tests/test_analyzer/: test_constructor.py  test_detect_outliers.py  test_generate_summary_report.py  test_get_weekly_hours.py  test_mean_and_std.py  test_tail.py
tests/test_arg_parser/: test_argument_parsing.py  test_argument_validation.py  test_constructor.py  test_help_and_utility.py  test_integration.py  test_run_arg_parser.py
tests/test_config_utils/: test_config_utils.py  test_create_default_config.py  test_get_analyzer_config.py  test_get_display_config.py  test_get_logbook_config.py  test_get_processing_config.py  test_get_time_recorder_config.py  test_get_visualization_config.py  test_load_config.py  test_update_config.py  test_validate_config.py
tests/test_formats/: test_excel_handler.py  test_format_registry.py  test_html_handler.py  test_json_handler.py  test_parquet_handler.py  test_xml_handler.py  test_yaml_handler.py
tests/test_logbook/: test_add_missing_days_to_logbook.py  test_find_and_add_missing_days.py  test_find_missing_days_in_logbook.py  test_get_weekly_hours_from_log.py  test_load_logbook.py  test_load_logbook_errors.py  test_print_weekly_summary.py  test_record_into_df.py  test_remove_duplicate_lines.py  test_squash_df.py  test_squash_df2.py  test_tail.py
tests/test_logging_utils/: test_level_specific_formatter.py  test_logging_utils.py  test_logging_utils_integration.py  test_set_global_log_level.py  test_setup_logger.py
tests/test_time_recorder/: test_calculate_overtime.py  test_calculate_work_duration.py  test_print_state.py  test_repr.py  test_str_method.py  test_time_report_line_constructor.py  test_time_report_line_to_dict.py  test_time_report_line_update_boot_time.py
tests/test_visualizer/: test_color_schemes.py  test_constructor.py  test_constructor_edge_cases.py  test_data_filtering.py  test_display_all_plots.py  test_get_rolling_average.py  test_histogram.py  test_integration.py  test_is_valid_time.py  test_make_logbook_robust.py  test_make_logbook_robust_edge_cases.py  test_plot_daily_work_hours.py  test_plot_daily_work_hours_comprehensive.py  test_start_end_time_histogram.py
